Update Flutter CI/CD workflow with Dart 3.6+

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           flutter-version: '3.13.0'
 
+      - name: Disable Flutter Analytics
+        run: flutter config --no-analytics
+
       - name: Install dependencies
         run: flutter pub get
 
